@@ -67,6 +67,7 @@ build () {
 		fi
 	done
 	$ROOTCMD make $(echo $TARGETS | sed 's/build_/stats_/g') > dest/stats.txt 2>&1 || true
+	make release
 }
 
 upload () {
