@@ -215,8 +215,10 @@ debian-installer (20050630) UNRELEASED; urgency=low
   * Add libnss-files-udeb to exclude list to work around bug #322506.
   * Optimise pkg-lists a bit.
   * rootskel-locale renamed to installation-locale.
+  * Move md5sums and udeb.list generation into "release" target of
+    build/Makefile and run these as part of the daily build too.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 11 Aug 2005 11:51:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 12 Aug 2005 11:00:55 -0400
 
 debian-installer (20050317) unstable; urgency=low
 
